# mq

./: '  .dockerignore  .gitattributes  .gitignore  .goreleaser.yaml  .tool-versions  .typos.toml  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.vercel  README.md  context7.json  deny.toml  flake.nix  justfile  rust-toolchain.toml  task.md  test_error.mq  vercel.json
crates/fuzz/: Cargo.toml
crates/mdq-hir/: Cargo.toml  README.md
crates/mdq-hir/examples/: symbols.rs
crates/mdq-hir/src/: builtin.rs  error.rs  find.rs  hir.rs  lib.rs  reference.rs  resolve.rs  scope.rs  source.rs  symbol.rs
crates/mdq-lang/: Cargo.toml  README.md
crates/mdq-lang/benches/: benchmark.rs
crates/mdq-lang/src/: ast.rs  error.rs  eval.rs  lib.rs  value.rs
crates/mdq-lang/src/ast/: node.rs
crates/mdq-lang/src/cst/: error.rs  parser.rs
crates/mdq-lang/src/eval/: builtin.rs  env.rs  error.rs  module.rs  runtime_value.rs
crates/mdq-lang/src/lexer/: error.rs  token.rs
crates/mdq-lang/tests/: integration_tests.rs
crates/mdq-lsp/: Cargo.toml  README.md
crates/mdq-lsp/src/: completions.rs  document_symbol.rs  goto_definition.rs  hover.rs  lib.rs  main.rs  references.rs  semantic_tokens.rs
crates/mdq-repl/: Cargo.toml  README.md
crates/mdq-repl/src/: command_context.rs  lib.rs  repl.rs
crates/mq-api/: Cargo.toml
crates/mq-api/src/: lib.rs
crates/mq-c-api/: Cargo.toml  README.md  build.rs
crates/mq-c-api/src/: lib.rs
crates/mq-check/: Cargo.toml  README.md
crates/mq-check/src/: builtin.rs  constraint.rs  deferred.rs  exhaustiveness.rs  format.rs  infer.rs  lib.rs  main.rs  narrowing.rs  types.rs  unify.rs
crates/mq-check/src/constraint/: categories.rs  helpers.rs  (+1 more)
crates/mq-check/tests/: error_location_test.rs  integration_test.rs  type_errors_test.rs
crates/mq-cli/: Cargo.toml  README.md
crates/mq-cli/src/: cli.rs  debugger.rs  lib.rs  main.rs
crates/mq-cli/tests/: integration_tests.rs
crates/mq-crawler/: Cargo.toml  README.md
crates/mq-crawler/assets/: demo.tape
crates/mq-crawler/src/: crawler.rs  http_client.rs  lib.rs  main.rs  robots.rs  sitemap.rs
crates/mq-dap/: Cargo.toml  README.md
crates/mq-dap/src/: adapter.rs  error.rs  executor.rs  handler.rs  lib.rs  log.rs  main.rs  protocol.rs  server.rs
crates/mq-docs/: Cargo.toml  README.md
crates/mq-docs/src/: lib.rs  main.rs
crates/mq-ffi/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  mq.h  test_mq.c
crates/mq-ffi/src/: lib.rs
crates/mq-formatter/: Cargo.toml  README.md
crates/mq-formatter/benches/: benchmark.rs
crates/mq-formatter/src/: formatter.rs  lib.rs  main.rs
crates/mq-hir/: Cargo.toml  README.md
crates/mq-hir/examples/: symbols.rs
crates/mq-hir/src/: builtin.rs  error.rs  find.rs  hir.rs  lib.rs  reference.rs  resolve.rs  scope.rs  source.rs  symbol.rs
crates/mq-lang/: Cargo.toml  README.md  builtin.mq  builtin_tests.mq
crates/mq-lang/benches/: benchmark.rs  optree_comparison.rs
crates/mq-lang/examples/: extract_js_code.rs  extract_list.rs  extract_list1.rs  extract_table.rs  fibonacci.rs  markdown_toc.rs  rule110.rs  snake_to_camel.rs
crates/mq-lang/modules/: ast.mq  cbor.mq  csv.mq  csv_test.mq  fuzzy.mq  fuzzy_test.mq  fuzzy_tests.mq  hcl.mq  json.mq  json_test.mq  json_tests.mq  md.mq  md_test.mq  module_tests.mq  section.mq  section_test.mq  semver.mq  semver_test.mq  table.mq  table_test.mq  test.mq  toml.mq  toml_test.mq  toml_tests.mq  toon.mq  toon_test.mq  xml.mq  xml_test.mq  xml_tests.mq  yaml.mq  yaml_test.mq  yaml_tests.mq
crates/mq-lang/proptest-regressions/: optimizer.txt
crates/mq-lang/src/: arena.rs  ast.rs  compiler.rs  cst.rs  engine.rs  error.rs  eval.rs  ident.rs  lexer.rs  lib.rs  macro_expand.rs  macro_expander.rs  module.rs  number.rs  optimizer.rs  optree.rs  range.rs  selector.rs  suggest.rs  value.rs  value_macros.rs
crates/mq-lang/tests/: integration_tests.rs  property_based_tests.rs  strategies.rs  test_ast_json.rs  test_engine_ast.rs
crates/mq-lint/: Cargo.toml  README.md
crates/mq-lint/src/: config.rs  fix.rs  format.rs  lib.rs  main.rs  message.rs  rules.rs
crates/mq-lsp/: Cargo.toml  README.md
crates/mq-lsp/src/: capabilities.rs  code_action.rs  completions.rs  document_symbol.rs  error.rs  execute_command.rs  folding_range.rs  goto_definition.rs  hover.rs  inlay_hints.rs  lib.rs  main.rs  refactor.rs  references.rs  rename.rs  semantic_tokens.rs  server.rs  signature_help.rs  workspace_symbol.rs
crates/mq-macros/: Cargo.toml  README.md
crates/mq-macros/src/: lib.rs
crates/mq-macros/tests/: integration_tests.rs
crates/mq-markdown/: Cargo.toml  README.md
crates/mq-markdown/benches/: benchmark.rs
crates/mq-markdown/examples/: html_convert.rs
crates/mq-markdown/src/: html_to_markdown.rs  lib.rs  markdown.rs  node.rs
crates/mq-markdown/tests/: fragment_property_tests.rs  html_to_markdown_tests.rs
crates/mq-mcp/: Cargo.toml  README.md
crates/mq-mcp/src/: main.rs  server.rs
crates/mq-python/: Cargo.toml  README.md  pyproject.toml
crates/mq-python/src/: lib.rs  result.rs  value.rs
crates/mq-python/tests/: test_mq.py
crates/mq-repl/: Cargo.toml  README.md
crates/mq-repl/src/: command_context.rs  lib.rs  repl.rs
crates/mq-run/: Cargo.toml
crates/mq-run/src/: cli.rs  debugger.rs  grep.rs  json.rs  lib.rs  main.rs  module_info.rs  output.rs  reference.rs  table.rs
crates/mq-run/tests/: integration_tests.rs
crates/mq-test/: Cargo.toml  README.md
crates/mq-test/src/: coverage.rs  highlight.rs  lib.rs  main.rs  runner.rs  strategies.rs
crates/mq-tui/: Cargo.toml  README.md
crates/mq-tui/src/: app.rs  event.rs  tests.rs  ui.rs
crates/mq-tui/tests/: tests.rs
crates/mq-typechecker/: Cargo.toml  README.md
crates/mq-typechecker/src/: builtin.rs  constraint.rs  infer.rs  lib.rs  main.rs  narrowing.rs  types.rs  unify.rs
crates/mq-typechecker/tests/: builtin_test.rs  debug_abs_test.rs  debug_builtin.rs  error_location_test.rs  integration_test.rs  type_errors_test.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: interpreter.rs
(+469 files in other folders)
