[workspace]
members = [
  "fuzz",
  "crates/mq-ffi",
  "crates/mq-run",
  "crates/mq-lang",
  "crates/mq-repl",
  "crates/mq-markdown",
  "crates/mq-lsp",
  "crates/mq-hir",
  "crates/mq-formatter",
  "crates/mq-wasm",
  "crates/mq-python",
  "crates/mq-web-api",
  "crates/mq-dap",
  "crates/mq-crawler",
]
resolver = "3"

[workspace.dependencies]
# Internal crates
mq-dap = {path = "crates/mq-dap", version = "0.5.10"}
mq-formatter = {path = "crates/mq-formatter", version = "0.5.10"}
mq-hir = {path = "crates/mq-hir", version = "0.5.10"}
mq-lang = {path = "crates/mq-lang", version = "0.5.10"}
mq-lsp = {path = "crates/mq-lsp", version = "0.5.10"}
mq-markdown = {path = "crates/mq-markdown", version = "0.5.10"}
mq-repl = {path = "crates/mq-repl", version = "0.5.10"}
# External dependencies
arbitrary = {version = "1.4.2", features = ["derive"]}
arboard = {version = "3.6.1", default-features = false}
assert_cmd = "2.1.2"
async-trait = "0.1.83"
axum = "0.8.8"
base64 = "0.22.1"
bimap = "0.6.3"
cbindgen = "0.29.2"
chrono = "0.4.42"
clap = "4.5.54"
colored = "3.0.0"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
dap = "0.4.1-alpha1"
dashmap = "6.1.0"
deadpool-libsql = "0.1.0"
dirs = "6.0.0"
divan = {version = "3.0.5", package = "codspeed-divan-compat"}
ego-tree = "0.10.0"
fantoccini = "0.22.0"
futures = "0.3"
httpmock = "0.8.2"
itertools = "0.14.0"
js-sys = "0.3.77"
libc = "0.2"
libfuzzer-sys = "0.4"
libsql = "0.9.29"
markdown = "1.0.0"
miette = "7.6.0"
mimalloc = "0.1.48"
nom = "8.0.0"
nom_locate = "5.0.0"
opfs = "0.1.4"
percent-encoding = "2.3.2"
proptest = "1.9"
pyo3 = "0.27.2"
rayon = "1.11.0"
regex-lite = "0.1.8"
reqwest = "0.12"
robots_txt = "0.7"
rstest = "0.26.1"
rustc-hash = "2.1.1"
rustyline = {version = "17.0.2", default-features = false}
scopeguard = "1.2.0"
scraper = "0.25.0"
serde = "1.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
serde_yaml = "0.9"
slotmap = "1.1.1"
smallvec = "1.15.1"
smol_str = "0.3.5"
string-interner = "0.19"
strsim = "0.11.1"
strum = "0.27.2"
tempfile = "3.24"
thiserror = "2.0.17"
tokio = "1.49.0"
tokio-macros = "2.5.0"
tower = "0.5.2"
tower-http = "0.6.8"
tower-lsp-server = "0.23.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
url = "2.5.8"
utoipa = "5.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen-test = "0.3.55"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = 'abort'
strip = true

[profile.bench]
inherits = "release"
