[workspace]
members = [
  "fuzz",
  "crates/mq-ffi",
  "crates/mq-macros",
  "crates/mq-run",
  "crates/mq-lang",
  "crates/mq-repl",
  "crates/mq-markdown",
  "crates/mq-lsp",
  "crates/mq-hir",
  "crates/mq-formatter",
  "crates/mq-wasm",
  "crates/mq-web-api",
  "crates/mq-dap",
  "crates/mq-crawler",
  "crates/mq-check",
  "crates/mq-test",
  "crates/mq-lint",
  "editors/zed",
]
resolver = "3"

[workspace.dependencies]
# Internal crates
mq-check = {path = "crates/mq-check", version = "0.6.3"}
mq-dap = {path = "crates/mq-dap", version = "0.6.3"}
mq-formatter = {path = "crates/mq-formatter", version = "0.6.3"}
mq-hir = {path = "crates/mq-hir", version = "0.6.3"}
mq-lang = {path = "crates/mq-lang", version = "0.6.3"}
mq-macros = {path = "crates/mq-macros", version = "0.6.3"}
mq-markdown = {path = "crates/mq-markdown", version = "0.6.3"}
mq-repl = {path = "crates/mq-repl", version = "0.6.3"}
mq-lint = {path = "crates/mq-lint", version = "0.6.2"}
# External dependencies
arbitrary = {version = "1.4.2", features = ["derive"]}
arboard = {version = "3.6.1", default-features = false}
assert_cmd = "2.2.2"
axum = "0.8.8"
base64 = "0.22.1"
bimap = "0.6.3"
cbindgen = "0.29.2"
chromiumoxide = {version = "0.9", default-features = false}
chrono = "0.4.44"
ciborium = "0.2.2"
clap = "4.6.1"
clap_complete = "4.6.5"
clap_complete_nushell = "4.6.0"
colored = "3.1.1"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.15"
csv = "1.4"
dap = "0.4.1-alpha1"
dashmap = "6.2.1"
dirs = "6.0.0"
divan = {version = "4.7.0", package = "codspeed-divan-compat"}
ego-tree = "0.11.0"
fantoccini = {version = "0.22.1", default-features = false, features = ["rustls-tls"]}
futures = "0.3"
glob = "0.3.3"
hcl-rs = "0.19.7"
httpmock = "0.8.2"
itertools = "0.15.0"
js-sys = "0.3.77"
libc = "0.2"
libfuzzer-sys = "0.4"
markdown = "1.0.0"
md5 = "0.8.0"
miette = "7.6.0"
mimalloc = "0.1.48"
nom = "8.0.0"
nom_locate = "5.0.0"
opentelemetry = "0.32"
opentelemetry-otlp = {version = "0.32", features = ["grpc-tonic"]}
opentelemetry_sdk = {version = "0.32", features = ["rt-tokio"]}
opfs = "0.2.0"
percent-encoding = "2.3.2"
proptest = "1.11"
rand = "0.9.4"
rayon = "1.11.0"
regex-lite = "0.1.9"
reqwest = {version = "0.13"}
ureq = {version = "3"}
robots_txt = "0.7"
ropey = "1.6"
rstest = "0.26.1"
rustc-hash = "2.1.2"
rustyline = {version = "18.0.0", default-features = false}
scopeguard = "1.2.0"
scraper = "0.27.0"
serde = "1.0"
serde-wasm-bindgen = "0.6.5"
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.11.0"
slotmap = "1.1.1"
smallvec = "1.15.1"
smol_str = "0.3.6"
string-interner = "0.20"
strsim = "0.11.1"
strum = "0.28.0"
tabled = {version = "0.21.0", default-features = false, features = ["std", "ansi"]}
tempfile = "3.27"
thiserror = "2.0.18"
tokio = "1.52.2"
toml = "1.1"
tower = "0.5.3"
tower-http = "0.7.0"
tower-lsp-server = "0.23.0"
tracing = "0.1.44"
tracing-opentelemetry = "0.33"
tracing-subscriber = "0.3.23"
url = "2.5.8"
utoipa = "5.5"
utoipa-swagger-ui = {version = "9", features = ["axum", "vendored"]}
uuid = "1.23.4"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.55"
wasm-bindgen-test = "0.3.65"
yaml-rust2 = "0.11.0"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = 'abort'
strip = true

[profile.bench]
inherits = "release"
