[package]
edition = "2024"
name = "mq-lang-fuzz"
publish = false
version = "0.2.8"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = {version = "1.4.1", features = ["derive"]}
itertools.workspace = true
libfuzzer-sys = "0.4"
mq-lang.workspace = true

[[bin]]
bench = false
doc = false
name = "interpreter"
path = "fuzz_targets/interpreter.rs"
test = false
