[package]
edition = "2024"
license = "MIT"
name = "mq-fuzz"
publish = false
version = "0.5.5"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = { workspace = true }
itertools = { workspace = true }
libfuzzer-sys = { workspace = true }
mq-lang = { workspace = true }

[[bin]]
bench = false
doc = false
name = "interpreter"
path = "fuzz_targets/interpreter.rs"
test = false
