[package]
edition = "2024"
license = "MIT"
name = "mq-lang-fuzz"
publish = false
version = "0.5.2"

[package.metadata]
cargo-fuzz = true

[dependencies]
arbitrary = {version = "1.4.2", features = ["derive"]}
itertools = "0.14.0"
libfuzzer-sys = "0.4"
mq-lang = {path = "../mq-lang", version = "0.5.1"}

[[bin]]
bench = false
doc = false
name = "interpreter"
path = "fuzz_targets/interpreter.rs"
test = false
