[package]
edition = "2024"
name = "mdq-hir"
version = "0.1.0"

[dependencies]
compact_str = {workspace = true}
itertools = {workspace = true}
mdq-lang = {path = "../../crates/mdq-lang", version = "0.1.0"}
rustc-hash = {workspace = true}
slotmap = {workspace = true}
strsim = "0.11.1"
thiserror = {workspace = true}
url = "2.5.4"

[dev-dependencies]
rstest = {workspace = true}
