[package]
description = "Lexer, parser and evaluator of mdq."
edition = "2024"
exclude = [".github"]
name = "mdq-lang"
readme = "README.md"
version = "0.1.0"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.39"
compact_str = {workspace = true}
dirs = "6.0.0"
env_logger = "0.11.6"
itertools = {workspace = true}
log = "0.4.22"
mdq-md = {path = "../../crates/mdq-md", version = "0.1.0"}
miette = {workspace = true}
nom = {version = "7.1.3"}
nom_locate = "4.2.0"
percent-encoding = "2.3.1"
regex = "1.11.1"
rustc-hash = {workspace = true}
thiserror = {workspace = true}

[dev-dependencies]
criterion = "0.5.1"
rstest = {workspace = true}

[[bench]]
harness = false
name = "benchmark"
