[package]
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "mq-c-api"
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
libc = "0.2"
mq-lang.workspace = true
mq-markdown.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
cbindgen = "0.29.2"
