[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "C API for integrating mq into C applications"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-c-api"
publish = false
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.3"

[dependencies]
libc = "0.2"
mq-lang = {path = "../mq-lang", version = "0.5.3"}
mq-markdown = {path = "../mq-markdown", version = "0.5.3"}

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[build-dependencies]
cbindgen = "0.29.2"
