[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Syntax checker for mq files"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-check"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.14"

[dependencies]
clap = {workspace = true, features = ["derive"]}
colored = {workspace = true}
miette = {workspace = true, features = ["fancy"]}
mq-hir = {workspace = true}

[[bin]]
doc = false
name = "mq-check"
path = "src/main.rs"
