[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
description = "mq is a Markdown processing tool that can filter markdown nodes by using jq-like syntax."
documentation = "https://github.com/harehare/mq/blob/master/docs/README.md"
edition = "2024"
exclude = [
  ".github",
  "editors/*",
  "playground/*",
  ".goreleaser.yaml",
  "justfile",
  "tests",
  "examples",
  "docs",
  "Dockerfile",
]
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license-file = "LICENSE"
name = "mq-cli"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.3.0"

[features]
debugger = ["mq-lang/debugger", "dep:rustyline", "dep:strum", "dep:regex-lite", "mq-dap"]
default = ["std"]
std = []

[dependencies]
clap.workspace = true
colored.workspace = true
itertools.workspace = true
miette = {workspace = true, features = ["fancy"]}
mq-dap = {workspace = true, optional = true}
mq-formatter.workspace = true
mq-hir.workspace = true
mq-lang = {workspace = true, features = ["file-io"]}
mq-lsp.workspace = true
mq-markdown = {workspace = true, features = ["json", "html-to-markdown"]}
mq-mcp.workspace = true
mq-repl.workspace = true
mq-tui.workspace = true
rayon = "1.11.0"
regex-lite = {workspace = true, optional = true}
rustyline = {version = "17.0.2", optional = true, default-features = false, features = ["custom-bindings", "with-file-history"]}
strum = {version = "0.27.2", features = ["derive"], optional = true}
tokio = {version = "1.47.1", features = ["io-util", "io-std", "rt"]}
url.workspace = true

[dev-dependencies]
assert_cmd = "2.0.17"
mq-test.workspace = true
rstest.workspace = true

[[bin]]
doc = false
name = "mq"
path = "src/main.rs"
required-features = ["std"]

[[bin]]
name = "mq-dbg"
path = "src/bin/dbg.rs"
required-features = ["debugger"]
