[package]
edition.workspace = true
exclude = [
  ".github",
  "editors/*",
  "playground/*",
  ".goreleaser.yaml",
  "justfile",
  "tests",
  "examples",
  "docs",
  "Dockerfile",
]
homepage.workspace = true
keywords.workspace = true
license-file.workspace = true
name = "mq-cli"
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
debugger = ["mq-lang/debugger", "dep:rustyline", "dep:strum", "dep:regex-lite", "mq-dap"]
default = ["std", "use_mimalloc"]
std = []
use_mimalloc = ["mimalloc"]

[dependencies]
clap.workspace = true
colored.workspace = true
dirs.workspace = true
itertools.workspace = true
miette = {workspace = true, features = ["fancy"]}
mimalloc = {version = "0.1.48", features = ["v3"], optional = true}
mq-dap = {workspace = true, optional = true}
mq-formatter.workspace = true
mq-hir.workspace = true
mq-lang = {workspace = true, features = ["file-io"]}
mq-lsp.workspace = true
mq-markdown = {workspace = true, features = ["json", "html-to-markdown"]}
mq-mcp.workspace = true
mq-repl.workspace = true
rayon = "1.11.0"
regex-lite = {workspace = true, optional = true}
rustyline = {version = "17.0.2", optional = true, default-features = false, features = ["custom-bindings", "with-file-history"]}
strum = {version = "0.27.2", features = ["derive"], optional = true}
tokio = {version = "1.48.0", features = ["io-util", "io-std", "rt"]}
url.workspace = true

[dev-dependencies]
assert_cmd = "2.1.1"
mq-test.workspace = true
rstest.workspace = true

[[bin]]
doc = false
name = "mq"
path = "src/main.rs"
required-features = ["std"]

[[bin]]
name = "mq-dbg"
path = "src/bin/dbg.rs"
required-features = ["debugger"]
