[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Directory crawler for batch Markdown file processing"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-crawler"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.1"

[dependencies]
clap = {version = "4.5", features = ["derive"]}
crossbeam = "0.8.4"
dashmap = "6.1.0"
fantoccini = "0.22.0"
futures = "0.3"
miette = {version = "7.6.0", features = ["fancy"]}
mq-lang = {path = "../mq-lang", version = "0.5.1"}
mq-markdown = {path = "../mq-markdown", version = "0.5.1"}
reqwest = {version = "0.12", features = ["json", "rustls-tls"]}
robots_txt = "0.7"
scraper = "0.24"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
url = "2.5.7"

[[bin]]
doc = false
name = "mqcr"
path = "src/main.rs"

[dev-dependencies]
httpmock = "0.8.2"
rstest = "0.26.1"
