[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Directory crawler for batch Markdown file processing"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-crawler"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.22"

[dependencies]
chromiumoxide = {workspace = true}
clap = {workspace = true, features = ["derive"]}
crossbeam = {workspace = true}
dashmap = {workspace = true}
fantoccini = {workspace = true, features = ["rustls-tls"]}
futures = {workspace = true}
miette = {workspace = true, features = ["fancy"]}
mq-lang = {workspace = true}
mq-markdown = {workspace = true}
reqwest = {workspace = true, features = ["json"]}
robots_txt = {workspace = true}
scraper = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter"]}
url = {workspace = true}

[[bin]]
doc = false
name = "mq-crawl"
path = "src/main.rs"

[dev-dependencies]
httpmock = {workspace = true}
rstest = {workspace = true}
