[package]
edition = "2024"
name = "mq-dap"
version = "0.4.0"

[dependencies]
crossbeam-channel = "0.5.15"
dap = "0.4.1-alpha1"
miette = {workspace = true, features = ["fancy"]}
mq-lang = {workspace = true, features = ["debugger"]}
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = {version = "1.48", features = ["full"]}
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

[dev-dependencies]
tempfile = "3.23"
