[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Debug Adapter Protocol implementation for mq"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-dap"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.10"

[dependencies]
crossbeam-channel = {workspace = true}
dap = {workspace = true}
miette = {workspace = true, features = ["fancy"]}
mq-lang = {workspace = true, features = ["debugger"]}
serde = {workspace = true}
serde_json = {workspace = true}
thiserror = {workspace = true}
tokio = {workspace = true, features = ["full"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true, features = ["env-filter"]}

[dev-dependencies]
tempfile = {workspace = true}
