[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Documentation generator for mq functions and macros"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-docs"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.14"

[dependencies]
clap = {workspace = true, features = ["derive"]}
itertools = {workspace = true}
miette = {workspace = true, features = ["fancy"]}
mq-hir = {workspace = true}
mq-lang = {workspace = true}
url = {workspace = true}

[[bin]]
doc = false
name = "mq-docs"
path = "src/main.rs"
