[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "C API for integrating mq into C applications"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-ffi"
publish = false
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.11"

[dependencies]
libc = {workspace = true}
mq-lang = {workspace = true}
mq-markdown = {workspace = true, features = ["html-to-markdown"], default-features = true}

[lib]
crate-type = ["cdylib", "staticlib"]

[build-dependencies]
cbindgen = {workspace = true}

[features]
default = ["html-to-markdown"]
html-to-markdown = ["mq-markdown/html-to-markdown"]
