[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Code formatter for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-formatter"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.2"

[dependencies]
mq-lang = {path = "../mq-lang", version = "0.5.1", features = ["cst"]}
rustc-hash = "2.1.1"

[dev-dependencies]
rstest = "0.26.1"
