[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Code formatter for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-formatter"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.12"

[dependencies]
mq-lang = {workspace = true, features = ["cst"]}
rustc-hash = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}
divan = {workspace = true}

[[bench]]
harness = false
name = "benchmark"
