[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Code formatter for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-formatter"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.6.0"

[dependencies]
clap = {workspace = true, features = ["derive"]}
glob = "0.3.3"
miette = {workspace = true, features = ["fancy"]}
mq-lang = {workspace = true, features = ["cst"]}

[dev-dependencies]
divan = {workspace = true}
rstest = {workspace = true}

[[bench]]
harness = false
name = "benchmark"

[[bin]]
name = "mq-fmt"
path = "src/main.rs"
