[package]
categories.workspace = true
description = "High-level Internal Representation (HIR) for mq query language"
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
name = "mq-hir"
repository.workspace = true
version.workspace = true

[dependencies]
itertools.workspace = true
mq-lang = {workspace = true, features = ["cst"]}
rustc-hash.workspace = true
slotmap = "1.0.7"
smol_str.workspace = true
strsim = "0.11.1"
thiserror.workspace = true
url.workspace = true

[dev-dependencies]
rstest.workspace = true
