[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "High-level Internal Representation (HIR) for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-hir"
readme = "../../README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.3"

[dependencies]
itertools = "0.14.0"
mq-lang = {path = "../mq-lang", version = "0.5.3", features = ["cst"]}
rustc-hash = "2.1.1"
slotmap = "1.0.7"
smol_str = "0.3.4"
strsim = "0.11.1"
thiserror = "2.0.17"
url = "2.5.7"

[dev-dependencies]
rstest = "0.26.1"
