[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "High-level Internal Representation (HIR) for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-hir"
readme = "../../README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.14"

[dependencies]
itertools = {workspace = true}
mq-lang = {workspace = true, features = ["cst", "file-io"]}
rustc-hash = {workspace = true}
slotmap = {workspace = true}
smol_str = {workspace = true}
strsim = {workspace = true}
thiserror = {workspace = true}
url = {workspace = true}

[dev-dependencies]
rstest = {workspace = true}
