[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Core language implementation for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-lang"
readme = "../../README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.19"

[dependencies]
base64 = {workspace = true}
csv = {workspace = true}
chrono = {workspace = true}
dirs = {workspace = true}
itertools = {workspace = true}
miette = {workspace = true}
mq-markdown = {workspace = true, features = ["html-to-markdown"]}
nom = {workspace = true}
nom_locate = {workspace = true}
percent-encoding = {workspace = true}
regex-lite = {workspace = true}
ropey = {workspace = true, optional = true}
rustc-hash = {workspace = true}
serde = {workspace = true, features = ["derive", "rc"]}
serde_json = {workspace = true}
smallvec = {workspace = true}
smol_str = {workspace = true}
string-interner = {workspace = true}
thiserror = {workspace = true}
url = {workspace = true}
toon-format = { version = "0.4", default-features = false }

[features]
ast-json = ["smallvec/serde", "smol_str/serde"]
cst = ["dep:ropey"]
debugger = ["sync"]
default = ["std"]
file-io = []
std = []
sync = []

[dev-dependencies]
divan = {workspace = true}
proptest = {workspace = true}
rstest = {workspace = true}
scopeguard = {workspace = true}

[[bench]]
harness = false
name = "benchmark"
