[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Core language implementation for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-lang"
readme = "../../README.md"
repository = "https://github.com/harehare/mq"
version = "0.6.5"

[dependencies]
mq-macros = {workspace = true}
base64 = {workspace = true}
ciborium = {workspace = true}
csv = {workspace = true}
html-escape = "0.2"
md5 = {workspace = true}
sha2 = {workspace = true}
chrono = {workspace = true}
dirs = {workspace = true}
itertools = {workspace = true}
miette = {workspace = true}
mq-markdown = {workspace = true, features = ["html-to-markdown", "json", "obsidian"]}
nom = {workspace = true}
nom_locate = {workspace = true}
percent-encoding = {workspace = true}
rand = {workspace = true}
regex-lite = {workspace = true}
ropey = {workspace = true, optional = true}
rustc-hash = {workspace = true}
scraper = {workspace = true, optional = true}
serde = {workspace = true, features = ["derive", "rc"]}
serde_json = {workspace = true}
yaml-rust2 = {workspace = true}
toml = {workspace = true}
smallvec = {workspace = true}
smol_str = {workspace = true}
string-interner = {workspace = true}
strsim = {workspace = true}
thiserror = {workspace = true}
url = {workspace = true}
toon-format = { version = "0.5", default-features = false }
quick-xml = {workspace = true}
similar = "3.0.0"
tiktoken-rs = { version = "0.12", optional = true }
ureq = { workspace = true, optional = true }
uuid = {workspace = true, features = ["v4", "v7"]}
ammonia = {workspace = true}

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["console"] }
uuid = {workspace = true, features = ["js"]}
getrandom = { version = "0.4", features = ["wasm_js"] }
web-time = {workspace = true}

[features]
ast-json = ["smallvec/serde", "smol_str/serde"]
cst = ["dep:ropey"]
css-selector = ["dep:scraper"]
debugger = ["sync"]
default = ["std"]
file-io = []
std = []
sync = []
http-import = []
http = ["dep:ureq"]
http-import-ureq = ["http-import", "http"]
tiktoken = ["dep:tiktoken-rs"]

[dev-dependencies]
divan = {workspace = true}
proptest = {workspace = true}
rstest = {workspace = true}
scopeguard = {workspace = true}
tempfile = {workspace = true}

[[bench]]
harness = false
name = "benchmark"
