[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Static analysis linter for mq"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query", "lint"]
license = "MIT"
name = "mq-lint"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.7.0"

[features]
cli = ["dep:clap", "dep:colored", "dep:serde_json"]

[[bin]]
name = "mq-lint"
path = "src/main.rs"
required-features = ["cli"]

[package.metadata.binstall]
pkg-fmt = "bin"
pkg-url = "{ repo }/releases/download/v{ version }/{ bin }-{ target }{ binary-ext }"
disabled-strategies = ["quick-install"]

[dependencies]
clap = {workspace = true, features = ["derive"], optional = true}
colored = {workspace = true, optional = true}
mq-hir = {workspace = true}
mq-lang = {workspace = true}
rustc-hash = {workspace = true}
serde_json = {workspace = true, optional = true}

[dev-dependencies]
rstest = {workspace = true}
