[package]
authors = ["Takahiro Sato <harehare1110@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "Language Server Protocol implementation for mq query language"
edition = "2024"
homepage = "https://mqlang.org/"
keywords = ["markdown", "jq", "query"]
license = "MIT"
name = "mq-lsp"
readme = "README.md"
repository = "https://github.com/harehare/mq"
version = "0.5.4"

[dependencies]
bimap = "0.6.3"
dashmap = "6.1.0"
itertools = "0.14.0"
miette = {version = "7.6.0", features = ["fancy"]}
mq-formatter = {path = "../mq-formatter", version = "0.5.3"}
mq-hir = {path = "../mq-hir", version = "0.5.3"}
mq-lang = {path = "../mq-lang", version = "0.5.3", features = ["ast-json", "sync"]}
mq-markdown = {path = "../mq-markdown", version = "0.5.3"}
serde_json = "1.0.145"
tokio = {version = "1.48", features = ["macros", "io-std", "rt-multi-thread"]}
tokio-macros = "2.5.0"
tower-lsp-server = "0.22.1"
url = "2.5.7"

[[bin]]
name = "mq-lsp"
path = "src/main.rs"

[lib]
name = "mq_lsp"
path = "src/lib.rs"
